--- a/css/layout.css
+++ b/css/layout.css
@@ -1,16 +1,15 @@
 
 header{
-  background-image: url('./../images/header-background-color.png');
-  background-repeat: repeat-x;
+  background-color:#212429;
 }
 
 body{
+  background-color:#f9f9fb;
   position:relative;
 }
 
 main{
-  background-image:url(./../images/main-background.png);
-  padding: 16px;
+  padding: 16px 0;
 }
 
 
@@ -19,30 +18,36 @@ ul:before, ul:after, li:before, li:after, .container:before, .container:after,
 .sign-up-wrapper:before, .sign-up-wrapper:after, .col-2-right:before, .col-2-right:after,
 .blog-bottom-info:before, .blog-bottom-info:after, .music-wrapper:before, .music-wrapper:after,
 .search-wrapper:after, .search-wrapper:before,.date-likes:before, .date-likes:after,
-.upper-footer-wrapper:before, .upper-footer-wrapper:after, .img-3-right:before, .img-3-right:after,
-.img-left:before, .img-left:after{
+.upper-footer-wrapper:before, .upper-footer-wrapper:after, .bottom-footer-wrapper:before,
+.bottom-footer-wrapper:after, .img-3-right:before, .img-3-right:after,.img-left:before,
+.img-left:after, header:before, header:after, main:before, main:after, footer:before, footer:after{
   display: table;
   content: "";
   clear: both;
 }
 
-
-.right-wrapper{
-  /* display:inline-block; */
-  float: right;
-  width: 58%;
-  display: inline-block;
-  line-height: 29px;
+.container{
+  display:block;
+  padding: 0 16px;
 }
 
-header .container .left-wrapper{
-  background-image: url(./../images/header-border.png);
-  background-repeat: repeat-x;
+
+header .right-wrapper{
+  float: left;
+  width: 90%;
+  display: inline-block;
+  background: #212429;
+}
+
+header .left-wrapper{
+  float: left;
+  width:10%;
+  display:inline-block;
+  background-color: #3c3c3c;
 }
 
 .left-wrapper{
   float: left;
-  width: auto;
 }
 
 .left-wrapper .search-wrapper{
@@ -50,27 +55,28 @@ header .container .left-wrapper{
 }
 
 /* Banner  */
-.sign-up-wrapper{
+
+.banner-wrapper{
   background-color: #212429;
 }
 
-.banner img{
+
+.banner{
   display:none;
 }
 
 .sign-up-wrapper form input{
-  width: 80%;
+  display:inline-block;
+  width: calc(100% - 20px);
+  padding: 0 10px;
   line-height: 25px;
-  margin:0 5%;
   margin-bottom: 10px;
-  padding:0 5%;
   color: #bcbcbc;
 }
 
 .sign-up-wrapper form >:last-child{
   font-size: 10px;
-  width: 40%;
-  margin:0 0 5% 5%;
+  width: 100%;
   background: #fcfcfc;
   color: #212121;
 
@@ -82,63 +88,38 @@ header .container .left-wrapper{
   width:100%;
 }
 
+.col-2-right .left-wrapper > div{
+  margin-bottom: 30px;
+}
+
 .col-2-right .left-wrapper, .col-2-right .right-wrapper{
   display:inline-block;
 }
 
 /* blog wrapper */
 .blog-image-wrapper{
-  height: 257px;
+  height: 490px;
 }
 
 .blog-wrapper{
-  background: #fefefe;
   position: relative;
   text-align: center;
-  margin-bottom: 30px;
+  background: #fcfcfc;
 }
 .blog-bottom-info{
-  background-color: #f7f7f7;
-  border-top: 1px solid #c4c4c4;
-  padding:0 30px;
-  margin-top: 24px;
-}
-
-.blog-content-wrapper, .blog-bottom-info{
-  background-color: #fefefe;
+  border-top: 1px solid #f2f2f4;
+  padding:0px 27px;
+  margin-top: 37px;
 }
 
 .blog-content-wrapper{
-  padding:20px 30px;
+  padding:17px 30px;
   padding-bottom:0px;
 }
 
-.top-icon-wrapper, .bottom-icon-wrapper, .pen-icon-wrapper, .img-btm-icon-wrapper{
-  background-repeat: no-repeat;
-  display: inline-block;
+.top-icon-wrapper, .bottom-icon-wrapper, .pen-icon-wrapper, .img-btm-icon-wrapper, .quote-image-wrapper{
   position: absolute;
-}
-
-.top-icon-wrapper{
-  right:0px;
-  top: 0px;
-}
-.bottom-icon-wrapper{
-  top: 247px;
-}
-
-.bottom-icon-wrapper, .img-btm-icon-wrapper{
-  height: 20px;
-  left: 46%;
-}
-
-.img-btm-icon-wrapper{
-  top:285px;
-}
-
-.pen-icon-wrapper{
-  top: -10px;
-  background-image: url(./../images/blog-bottom-border.png);
+  display: inline-block;
 }
 
 
@@ -154,13 +135,13 @@ header .container .left-wrapper{
 
 /* image layout */
 .img-3-right{
-  height: 293px;
+  height: 556px;
   background-color: #cecece;
   padding: 1px;
 }
 
 .img-left-l .half-image, .img-right .half-image{
-  height: 146px;
+  height: 277px;
   margin-bottom: 1px;
 }
 
@@ -188,21 +169,10 @@ header .container .left-wrapper{
 
 /* quotes */
 .quotes-wrapper{
-  background-image:url(./../images/quote-background.png);
-  background-repeat: repeat-x;
-  padding: 40px 33px;
+  background-color: #131d1c;
+  padding: 50px 35px;
   position:relative;
-  text-align: center;
-  margin-bottom: 30px;
-}
-
-.quote-image-wrapper{
-  display:inline;
-  width: 3.8397%;
-  height: 20px;
-  position:absolute;
-  top:-10px;
-  /* left: 48%; */
+  text-align: justify;
 }
 
 
@@ -210,7 +180,7 @@ header .container .left-wrapper{
 .video-wrapper{
   position:relative;
   width: 100%;
-  height: 255px;
+  height: 487px;
 }
 
 .video-options ul{
@@ -222,12 +192,11 @@ header .container .left-wrapper{
 
 .music-wrapper{
   background-image: url(./../images/music-background.png);
-  background-repeat: no-repeat;
+  background-repeat: repeat-x;
   padding: 10px;
   position: relative;
   background-color: #aaaaaa;
-  height: 140px;
-  margin-bottom: 30px;
+  height: 270px;
 }
 
 .current_play{
@@ -240,28 +209,18 @@ header .container .left-wrapper{
 }
 
 .play-icon{
-  width: 33px;
-  height: 33px;
-  font-size: 12px;
-  display: inline-block;
-  line-height: 35px;
-  background-color: #fe3e00;
-  border-radius: 30px;
-  opacity: 0.8;
-  text-align: center;
-  color: white;
   float: left;
+  width: 60px;
+  color: white;
+  text-align: center;
+  border-radius: 50%;
+  display: inline-block;
+  background-color: #fe3e00;
 }
 
 .current-song-info{
   margin-left: 2px;
   display : inline-block;
-}
-
-.music-share-wrapper{
-  float: right;
-  display: inline;
-  padding: 0 5px;
 }
 
 /* right container */
@@ -284,18 +243,20 @@ header .container .left-wrapper{
 
 
 .search-input{
-  line-height:30px;
   padding: 0 10px;
+  line-height:30px;
   font-size: 10px;
-  float: left;
-  display:inline-block;
-  width:70%;
+  line-height: 50px;
+  display: inline-block;
+  width: 82%;
+  background-color: #fcfcfc;
 }
 
 .search-btn{
   background-color: #202020;
-  line-height: 27px;
-  width: 17%;
+  line-height: 50px;
+  font-size: 15px;
+  width: 10%;
   text-align: center;
   color: white;
   float: right;
@@ -307,16 +268,11 @@ header .container .left-wrapper{
 }
 
 .top-add-banner{
-  height: 315px;
+  height: 600px;
 }
 
 .second-add-banner{
-  height: 131px;
-}
-
-.search-wrapper, .top-add-banner, .category-wrapper, .second-add-banner,
-.latest-post-wrapper, .slider-image-wrapper, .facebook-wrapper, .slider-wrapper{
-  margin: 10px 0;
+  height: 250px;
 }
 
 .search-wrapper{
@@ -324,8 +280,8 @@ header .container .left-wrapper{
 }
 
 .post-img-wrapper{
-  width: 27.2151%;
-  height: 33px;
+  width: 25.6666%;
+  height: 62px;
   display:inline;
   float: left;
 }
@@ -335,136 +291,194 @@ header .container .left-wrapper{
 }
 
 .slider-image-wrapper{
-  background-image:url(./../images/small-slider-background.png);
-  background-repeat: repeat-x;
-  height: 120px;
+  background-color: #3a3c49;
+  height: 230px;
 }
 
 .facebook-wrapper{
-  height: 140px;
-  background-image: url(./../images/facebook-api-img.png);
-  background-repeat: no-repeat;
+  height: 250px;
+  margin-bottom: 40px;
 }
 
 /* Footer */
 footer{
-  background-image: url(./../images/footer-background.png);
-  background-repeat: repeat-x;
-  width: 100%;
-}
-
-.upper-footer-wrapper{
-  padding: 15px 0;
+  background:#212429;
 }
 
 .footer-inner-wrapper{
   display: block;
 }
 
+.bottom-footer-wrapper{
+  display: block;
+  background: #17191c;
+  text-align: center;
+}
+
+.bottom-footer-wrapper ul{
+  display: inline-block;
+}
+
 @media(min-width: 376px){
+
+  header, main, footer, .banner-wrapper, .upper-footer-wrapper, .bottom-footer-wrapper{
+    width: 100%;
+  }
+
   .container{
     display:block;
-    margin:auto;
-    width: 84.375%;
+    padding: 0 44px;
   }
 
-  .right-wrapper{
-    /* display:inline-block; */
-    float: right;
-    width: 80%;
-  }
 
-  .banner img{
-    display:block;
+  .banner{
+    display:none;
+    height: 380px;
+    margin-top: -320px;
+    position:relative;
   }
 
   .banner-wrapper{
-    background-image: url(./../images/banner-wrapper.png);
-    background-repeat: repeat-x;
+    width: auto;
+    top: 55px;
   }
 
-  .sign-up-wrapper{
-    background-image:url(./../images/sign-up-background.png);
-    background-color:transparent;
+  .search-input{
+    width: 82%;
+  }
+
+  .slider-container{
+    position:absolute;
+    bottom: 260px;
+    right: 0px;
+    font-weight: bold;
+    text-align: center;
+    transform: rotate(270deg);
+  }
+
+  /* Slider */
+
+  .slider-indicator {
+    display:inline-block;
+    right: 0px;
+  }
+
+  .slider-container li span, .slider-indicator li span{
+    text-align:center;
+    color: #1C1C1C;
+    font-weight:bold;
+    float:left;
+  }
+
+  .slider-indicator li{
+    font-size: 9px;
+  }
+
+  .slider-controller li{
+    padding: 0 18px;
+    line-height: 18px;
+    font-size: 12px;
+    float: left;
+  }
+
+  .slider_1_left_btn, .slider_1_right_btn{
+    background-color: transparent;
+    color:black;
+    font-size: 10px;
+    line-height: 20px;
   }
 
   .sign-up-wrapper form{
-    float: right;
-    display: inline-block;
-    width: 95%;
-    padding: 10px;
+    display: block;
   }
 
   .sign-up-wrapper form input{
     width: 31%;
-    padding: 0 10px;
-    margin: 0 10px 0 0;
-  }
+    line-height: 40px;
+    margin: 0 2.36% 0 0 ;
+    }
 
   .sign-up-wrapper form >:last-child{
     margin: 0px;
-    width: 16%;
+    width: 20%;
     font-size: 10px;
     background: #212121;
+    float: right;
     color: white;
+  }
+  .sign-up-wrapper{
+    padding: 20px;
+    background-color: #f7f7f7
   }
 }
 
 @media(min-width: 768px){
-  header,main, footer, .banner-wrapper{
-    min-width: 64em;
+  header{
+    height: 345px;
   }
 
-  .right-wrapper{
-    /* display:inline-block; */
-    float: right;
-    width: 52.9776%;
+  header, main, footer, .banner-wrapper, .upper-footer-wrapper, .bottom-footer-wrapper{
+    min-width: 1280px;
+  }
+
+  .banner-wrapper{
+    background-color:transparent;
   }
 
   .container{
-    max-width: 50.375em;
-
+    padding: 0px;
+    width: 75em;
+    margin: auto;
   }
+
+  header .left-wrapper{
+    width:3.7897%;
+  }
+
+  header .right-wrapper{
+    /* display:inline-block; */
+    float: right;
+    width: 52.9411%;
+    line-height: 55px;
+  }
+
+  .banner{
+    display:block;
+    height: 580px;
+    margin-top: -290px;
+  }
+
 
   .left-wrapper .search-wrapper{
     display: none;
   }
 
-  .social-media-link{
-    background-image: url(./../images/header-border.png);
-    background-repeat: repeat-x;
-  }
-
-  /* Banner  */
-
-  .sign-up-wrapper form{
-    width: 83.1006%;
-    padding: 0px;
-  }
-
-  .sign-up-wrapper form input{
-    margin: 0 15px 0 0;
-  }
-
-  .sign-up-wrapper{
-    padding: 15px;
-  }
-
-
   /* main container */
   .col-2-right{
+    margin-top: 60px;
     position: static;
   }
 
   .col-2-right .left-wrapper{
-    width:74.3176%;
+    width:72.5098%;
   }
 
   .col-2-right .right-wrapper{
+    float:right;
+    background: white;
     position: static;
     display: inline-block;
-    width:23.32506%;
+    width:19.6078%;
+    padding:0 30px;
     border: 0px;
+  }
+
+  .col-2-right .right-wrapper >div{
+    margin-top: 40px;
+  }
+
+  .col-2-right .left-wrapper > div{
+    margin-bottom: 60px;
   }
 
   /* image layout */
@@ -478,46 +492,67 @@ footer{
 
   .img-left-r{
     display: inline-block;
-    width: 47.5836%;
-    height: 291px;
+    width: 47.6836%;
+    height: 555px;
     float: right;
   }
 
   .img-left-l {
     width: 51.9083%;
   }
-
-  /* right container */
-  .col-2-right .right-wrapper{
-    width: 18.3294%;
-    background-color: white;
-    padding: 15px;
-  }
-
-  .search-input{
-    background-image: url(./../images/search-background.png);
-    background-repeat: repeat-x;
-    line-height:30px;
-    width:68%;
-  }
-
-
-  .search-wrapper, .top-add-banner, .category-wrapper, .second-add-banner,
-  .latest-post-wrapper, .slider-image-wrapper, .facebook-wrapper, .slider-wrapper{
-    margin: 10px 0;
-  }
-
   .search-wrapper, .top-add-banner, .second-add-banner, .facebook-wrapper{
     display: block;
   }
 
+
+/* search */
   .search-wrapper{
     position: static;
     margin-top: 0px;
   }
 
-  .bottom-icon-wrapper, .img-btm-icon-wrapper{
-    left: 48%;
+  .search-input{
+    float: left;
+    width:75.121%;
+    padding: 0 7px;
+    display:inline-block;
+    background-color: #f9f9fb;
+  }
+
+  .search-btn{
+    width: 18.6666%;
+  }
+
+  .blog-content-wrapper{
+    padding:37px 60px;
+    padding-bottom:0px;
+  }
+
+  .blog-bottom-info{
+    padding:0px 57px;
+  }
+
+/* sign up */
+
+  .sign-up-wrapper{
+    padding: 30px;
+    padding-left: 0;
+  }
+
+  .sign-up-wrapper form{
+    float: right;
+    display: inline-block;
+    width: 83.0065%;
+  }
+
+  .sign-up-wrapper form input{
+    padding:0 30px;
+    width: 30%;
+    line-height: 50px;
+    }
+
+  .sign-up-wrapper form >:last-child{
+    width: 22%;
   }
 
   .share-media-wrapper{
@@ -525,22 +560,39 @@ footer{
     float: right;
   }
 
+  .quotes-wrapper{
+    padding: 70px 65px;
+    text-align: center;
+  }
+
   /* Footer */
-  .footer-inner-wrapper{
-    float: left;
-    display: inline-block;
+
+  .upper-footer-wrapper .container > div{
+    padding:0px;
     width: 22%;
-    margin-right: 15px;
+    margin-right: 30px;
+    float: left;
   }
 
   .signature-wrapper{
-    height: 77px;
-    width: 180px;
+    height: 147px;
+    width: 100%;
   }
-
 
   .instagram-image-wrapper{
-    width: 57.8px;
-    height: 51px;
+    height: 98px;
   }
+
+  .instagram-images-list li{
+    width: 32.5%;
+    margin: 1px;
+    float: left;
+  }
+
+  .instagram-images-list{
+    padding: 1px 0;
+    background-color: #7c7e82;
+    margin-top: 10px;
+  }
+
 }
